[gd_scene load_steps=3 format=3 uid="uid://coxets13yql5n"]

[ext_resource type="Script" path="res://AttacksAndHitboxes/Tim/standing_punch.gd" id="1_ss4cw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_udte1"]
radius = 17.1172

[node name="Standing Punch Tim" type="Area2D"]
position = Vector2(145, -66)
collision_layer = 6
collision_mask = 6
script = ExtResource("1_ss4cw")

[node name="HitBoxOne" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_udte1")

[node name="HitBoxTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="HitBoxTimer" to="." method="_on_hit_box_timer_timeout"]
